# dbt-activity-schema

./: .gitignore  Dockerfile  README.md  dbt_project.yml  pyproject.toml
.github/workflows/: ci.yml  pr.yml  setup.yml
integration_tests/: .gitignore  dbt_project.yml  profiles.yml
integration_tests/macros/: listagg_delimiter.sql  type_timestamp.sql
integration_tests/models/activities/: customer__bought_something.sql  customer__redshift_edge_cases.sql  customer__signed_up.sql  customer__visited_page.sql  customer_stream.sql  product__ordered.sql
integration_tests/models/dataset_columns/: customer__total_items_purchased_after.sql
integration_tests/models/datasets/aql_syntax/: dataset__filtered.sql  dataset__joined.sql  schema.yml
integration_tests/models/datasets/primary__all/: dataset__select_all_aggregate_after.sql  dataset__select_all_aggregate_all.sql  dataset__select_all_aggregate_before.sql  dataset__select_all_aggregate_between.sql  dataset__select_all_aggregate_between_after.sql  schema.yml  (+19 more)
integration_tests/seeds/activities/: bought_something.csv  product_ordered.csv  redshift_edge_cases_source.csv  seed_schema.yml  signed_up.csv  visited_page.csv
integration_tests/seeds/datasets/: seed_schema.yml
macros/activity_schema/activity/: activity.sql  build_activity.sql  build_json.sql  column.sql  generate_activity_id.sql  generate_activity_yml.sql
macros/activity_schema/constants/: aliases.sql  columns.sql
macros/activity_schema/dataset/: _build_dataset.sql  dataset.sql  dataset_activity.sql  query_stream.sql  select_column.sql  utils.sql
macros/activity_schema/stream/: build_stream.sql  cluster_keys.sql
macros/aql/: parse.sql  strings.sql  vocabulary.sql
(+133 files in other folders)
