[tool.poetry]
name = "dbt-aql"
version = "0.1.8"
description = "A dbt package to query Activity Streams using a SQL-esque interface."
authors = ["Bryce Codell <bryce.codell@24analytics.co"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-duckdb = "~1.7"
dbt-postgres = "~1.7"
dbt-bigquery = "~1.7"
localstack = "~3.0"
dbt-snowflake = "~1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
